# school-tg-tt-bot

./: .clang-format  .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  Dockerfile.deploy  Dockerfile.dev  README-DEV.md  README.md  conanfile.py  conanfile.txt  docker-compose.yml  docker-stack.dev.yml  docker-stack.prod.yml  main.cpp  otel-collector-config.dev.yaml
config/: config.dev.json  config.prod.json
docs/: CONAN-BUILD-STRATEGY.md  DEPLOYMENT-DEV.md  DEV-BUILD-CACHE.md  DEV-BUILD-TROUBLESHOOTING.md  TESTING-GUIDE.md  WEBHOOK-FORMAT.md  WEBHOOK-SETUP.md
docs/adr/: 001-technology-stack-selection.md  002-database-schema-design.md  003-concurrency-and-state-management.md  004-database-connection-management-and-error-handling.md  005-backup-and-recovery-strategy.md  006-security-and-abuse-prevention.md  007-observability-strategy.md  008-deployment-and-cicd-strategy.md  009-testing-strategy.md  010-data-consistency-and-validation.md  011-telegram-bot-feature-implementation.md  012-school21-api-integration-and-user-verification.md  013-configuration-management.md  014-development-workflow-and-local-setup.md  015-documentation-standards.md  README.md
include/bot/: bot.h  bot_api.h  bot_base.h  bot_base_impl.h  production_bot_api.h  test_bot.h  test_bot_api.h  webhook_server.h
include/config/: config.h
include/database/: connection_pool.h  transaction.h
include/models/: group.h  match.h  player.h
include/observability/: logger.h
include/repositories/: group_repository.h  match_repository.h  player_repository.h
include/school21/: api_client.h
include/utils/: elo_calculator.h  retry.h  validation.h
migrations/sql/: V1__initial_schema.sql  seed.sql
scripts/: build-docker.sh  build-images.sh  build.sh  clear-build-cache.sh  compile-images.sh  deploy-dev.sh  deploy-prod.sh  package-runtime.sh  patch-conan-openssl.sh  run.sh  setup-env.sh  setup-tunnel.sh  setup.sh  test-tunnel.sh  test.sh
src/bot/: bot.cpp  production_bot_api.cpp  test_bot.cpp  test_bot_api.cpp  webhook_server.cpp
src/config/: config.cpp
src/database/: connection_pool.cpp  transaction.cpp
src/observability/: logger.cpp
src/repositories/: group_repository.cpp  match_repository.cpp  player_repository.cpp
src/school21/: api_client.cpp
src/utils/: elo_calculator.cpp  retry.cpp
tests/fixtures/: telegram_mocks.cpp  telegram_mocks.h
tests/integration/: test_bot_scenarios_example.cpp  test_group_repository.cpp  test_match_flow.cpp  test_match_repository.cpp  test_player_repository.cpp  test_repository_validation.cpp
tests/mocks/: mock_school21_client.cpp  mock_school21_client.h
tests/unit/: test_admin_checks.cpp  test_retry.cpp  test_transaction.cpp  test_webhook.cpp
